--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "hscript",
+  "description": "Cli for converting html to hyperscript and the other way around",
   "version": "0.0.1",
   "bin": "./bin/hscript",
+  "preferGlobal": true,
+
   "dependencies": {
     "html2hscript": "^1.0.2",
     "minimist": "^1.1.0",
@@ -11,6 +14,7 @@
     "virtual-dom": "^1.3.0",
     "virtual-dom-stringify": "^2.1.0"
   },
+  
   "devDependencies": {
     "mocha": "^2.1.0"
   }
