--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "https://github.com/queckezz/hscript",
   "bin": "./bin/hscript",
 
+  "scripts": {
+    "test": "make test"
+  },
+
   "dependencies": {
     "html2hscript": "^1.0.2",
     "minimist": "^1.1.0",
